<resources>
    <string name="app_name">MediChem</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Zeeshan</string>
    <string name="nav_header_subtitle">987456251</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_orders">Order history</string>
    <string name="menu_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_login">Login</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="menu_item_forward">select</string>
    <string name="menu_item_reply">view details</string>
    <string name="menu_item_delete">delete</string>
    <string name="med_quantity">%s quantity</string>

    //

    <string name="Wishlist">Add to Wishlist</string>
    <string name="Share">Share</string>
    <string name="supra"><b>SUPRA WOOD</b></string>
    <string name="date_added">date added %s</string>
    <string name="prize">Price $ %s</string>
    <string name="subtotal_prize">subtotal ( %s items ) : $ %s</string>
    <string name="show_in_rupee">Rs %s</string>

    <string name="medical_address">
        Andheri east Mumbai
        Near Metro Station
        Andheri Cadsgds
        sfsdf slfashoaeu
        Maharashtra 400058.

    </string>
    <string name="confirmation_msg">you will shortly receive your order confirmation message and email</string>
    <string name="delivery_msg">Expected delivery within 4-6 days</string>


    <string name="order_id"><b>Order Id :</b> \t\t %s </string>
    <string name="order_date"><b>Order date :</b>%s</string>
    <string name="order_total"><b>Order total :</b>\t\t%s</string>
    <string name="payment_successful"><font fgcolor='#009B86'>Successful</font></string>
    <string name="payment_unsuccessful"><font fgcolor='#009B86'>Unsuccessful</font></string>
    <string name="product_id"><b>product Id :</b>\t\t%s</string>
    <string name="product_description"><b>description :</b>\t %s</string>
    <string name="product_usage"><b>Indications n Usage :</b>\t %s</string>
    <string name="email_cant_edited">Email can not be edited</string>
    <string name="address_cant_edited">Address can not be edited from here</string>
    <string name="name_updated_successfully">name updated successfully</string>
    <string name="phone_no_updated_successfully">phone number updated successfully</string>
    <string name="changes_updated_successfully">changes updated successfully</string>
    <string name="img_uploaded_msg">Image uploaded</string>
    <string name="payment_method">Payment method\n%s</string>
    <string name="cash_on_delivery_string">Cash on Delivery (COD)</string>
    <string name="pay_at_store_string">Pay at Store</string>
    <string name="google_pay_upi">Google Pay Upi</string>



    <string-array name="product_quantity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>


    <string-array name="india_states">
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttaranchal</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
</resources>