<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_login">


    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.anew.ui.intialSetup.loginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_nav_login_to_nav_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/nav_login"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_nav_login_to_nav_signUp"
            app:destination="@id/nav_signUp" />
        <action
            android:id="@+id/action_nav_login_to_adminActivity"
            app:destination="@id/adminActivity"
            app:popUpTo="@id/nav_login" />


    </fragment>

    <fragment
        android:id="@+id/nav_signUp"
        android:name="com.example.anew.ui.intialSetup.SignUpFragment"
        android:label="SignUp"
        tools:layout="@layout/fragment_sign_up">
        <action
            android:id="@+id/action_nav_signUp_to_nav_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/nav_login"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.anew.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_cart"
            app:destination="@id/nav_cart" />
        <action
            android:id="@+id/action_nav_home_to_medDetailsFragment"
            app:destination="@id/medDetailsFragment">
            <argument
                android:name="product"
                app:argType="com.example.anew.model.Product" />
        </action>

    </fragment>

    <fragment
        android:id="@+id/nav_orders"
        android:name="com.example.anew.ui.order.OrderFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.anew.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.anew.ui.cart.CartFragment"
        android:label="My Cart"
        tools:layout="@layout/fragment_cart" >
        <action
            android:id="@+id/action_nav_cart_to_newAddressFragment"
            app:destination="@id/newAddressFragment" >
            <argument
                android:name="products"
                app:argType="com.example.anew.model.Product[]" />
        </action>
        <action
            android:id="@+id/action_nav_cart_to_proceedWithDefaultAddBottomSheet"
            app:destination="@id/proceedWithDefaultAddBottomSheet" >

            <argument
                android:name="products"
                app:argType="com.example.anew.model.Product[]" />

            <argument
                android:name="address"
                app:argType="com.example.anew.model.Address" />

        </action>
    </fragment>
    <activity
        android:id="@+id/adminActivity"
        android:name="com.example.anew.AdminActivity"
        android:label="AdminActivity"
        tools:layout="@layout/activity_admin" />
    <fragment
        android:id="@+id/medDetailsFragment"
        android:name="com.example.anew.ui.medDetails.MedDetailsFragment"
        android:label="Details"
        tools:layout="@layout/fragment_med_details">
        <argument
            android:name="product"
            app:argType="com.example.anew.model.Product" />
        <action
            android:id="@+id/action_medDetailsFragment_to_nav_cart"
            app:destination="@id/nav_cart" />
        <action
            android:id="@+id/action_medDetailsFragment_to_newAddressFragment"
            app:destination="@id/newAddressFragment" >
            <argument
                android:name="products"
                app:argType="com.example.anew.model.Product[]" />
        </action>
        <action
            android:id="@+id/action_medDetailsFragment_to_proceedWithDefaultAddBottomSheet"
            app:destination="@id/proceedWithDefaultAddBottomSheet" >
            <argument
                android:name="products"
                app:argType="com.example.anew.model.Product[]" />
            <argument
                android:name="address"
                app:argType="com.example.anew.model.Address"/>
        </action>

    </fragment>
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.anew.ui.profile.ProfileFragment"
        android:label="profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/paymentDetailsFragment"
        android:name="com.example.anew.ui.payment.PaymentDetailsFragment"
        android:label="Payment"
        tools:layout="@layout/fragment_payment_details"
        >
        <argument
            android:name="address"
            app:argType="com.example.anew.model.Address" />
        <argument
            android:name="products"
            app:argType="com.example.anew.model.Product[]" />
        <action
            android:id="@+id/action_paymentDetailsFragment_to_orderPlacedFragment"
            app:destination="@id/orderPlacedFragment"
            app:popUpTo="@id/medDetailsFragment"
            app:popUpToInclusive="true" >
        </action>
    </fragment>

    <fragment
        android:id="@+id/newAddressFragment"
        android:name="com.example.anew.ui.newAddress.NewAddressFragment"
        android:label="Add new Address"
        tools:layout="@layout/fragment_new_address" >
        <argument
            android:name="products"
            app:argType="com.example.anew.model.Product[]" />
        <action
            android:id="@+id/action_newAddressFragment_to_paymentDetailsFragment"
            app:destination="@id/paymentDetailsFragment" >

            <argument
                android:name="address"
                app:argType="com.example.anew.model.Address" />
            <argument
                android:name="products"
                app:argType="com.example.anew.model.Product[]" />
        </action>

    </fragment>

    <dialog
        android:id="@+id/proceedWithDefaultAddBottomSheet"
        android:name="com.example.anew.utils.ProceedWithDefaultAddBottomSheet"
        android:label="ProceedWithDefaultAddBottomSheet"
        tools:layout="@layout/proceed_with_default_add_bottom_sheet_layout"
        >

        <argument
            android:name="products"
            app:argType="com.example.anew.model.Product[]" />

        <argument
            android:name="address"
            app:argType="com.example.anew.model.Address" />

        <action
            android:id="@+id/action_proceedWithDefaultAddBottomSheet_to_newAddressFragment2"
            app:destination="@id/newAddressFragment" >
            <argument
                android:name="products"
                app:argType="com.example.anew.model.Product[]" />
        </action>
        <action
            android:id="@+id/action_proceedWithDefaultAddBottomSheet_to_paymentDetailsFragment"
            app:destination="@id/paymentDetailsFragment" >

            <argument
                android:name="address"
                app:argType="com.example.anew.model.Address" />
            <argument
                android:name="products"
                app:argType="com.example.anew.model.Product[]" />

        </action>

    </dialog>
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.anew.ui.about.AboutFragment"
        android:label="About"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/orderPlacedFragment"
        android:name="com.example.anew.ui.orderPlaced.OrderPlacedFragment"
        android:label="fragment_order_placed"
        tools:layout="@layout/fragment_order_placed" >

    </fragment>


</navigation>