<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
    <data>
        <variable
            name="order"
            type="com.example.anew.model.Order" />
    </data>
    <com.google.android.material.circularreveal.CircularRevealLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.orderPlaced.OrderPlacedFragment"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            >

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/check_image_view1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:lottie_rawRes="@raw/check_mark"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_repeatCount="1"
                />
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/check_image_view"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_check_circle"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"
                />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/thank_you_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Thank You"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/check_image_view1"
                android:textStyle="bold"
                />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Your Order Has confirmed"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/thank_you_edit_text"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="10dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="50dp"
            android:layout_marginBottom="10dp"
            >
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/go_to_shopping"
                />

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/order_id(order.orderId)}"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
            android:layout_gravity="center_horizontal"
            tools:text="@string/order_id"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"

            >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirmation_msg"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="20dp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:alpha=".8"
                app:layout_constraintTop_toTopOf="parent"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/expected_delivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delivery_msg"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/msg"
                android:gravity="center_horizontal"
                android:layout_marginTop="40dp"
                />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/check_out_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="check out orders"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/expected_delivery"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/ic_shopping_bag"
                android:drawablePadding="5dp"
                android:backgroundTint="@color/tint_background"
                android:drawableTint="@android:color/white"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>






    </com.google.android.material.circularreveal.CircularRevealLinearLayout>
</layout>
