<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >

    <data>

        <variable
            name="product"
            type="com.example.anew.model.Product" />

        <variable
            name="listener"
            type="com.example.anew.ui.admin.detail.MyImageClickListener" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <ImageView
                android:id="@+id/medicine_image"
                glideErrorSrc="@{@drawable/ic_pills}"
                glideSrc="@{product.image1}"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginHorizontal="10dp"
                tools:background="@drawable/ic_pills" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/medicine_image"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/btn_border_bg" />

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/medicine_image"
                android:orientation="vertical"
                android:visibility="visible">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@{product.name}"
                    android:textAllCaps="true"
                    android:textColor="@color/text"
                    android:textSize="26dp"
                    tools:text="@string/supra" />


                <View
                    android:id="@+id/action_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="156dp"
                    android:background="@color/colordevider" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@{@string/med_price(String.valueOf(product.prize))}"
                    android:textColor="@color/text"
                    android:textSize="22dp"
                    tools:text="$ 114"

                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:padding="5dp"

                    >

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16dp"
                        android:text="Product Detail"
                        android:textColor="@color/text"
                        android:textSize="16dp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/product_details_spinner"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="16dp" />

                </LinearLayout>

                <com.google.android.material.textview.MaterialTextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="16dp"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/product_description"
                    android:textColor="@color/subtext"
                    android:textSize="15dp"
                    android:visibility="visible" />
            </LinearLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear1"
                android:layout_marginStart="10dp"
                android:padding="5dp">

                <TextView
                    android:id="@+id/is_stock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="In Stock"
                    android:textColor="#35EA91"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_location"
                    android:drawablePadding="5dp"
                    android:fontFamily="sans-serif"
                    android:text="Deliver - Mumbai 400058"
                    android:textColor="#448AFF"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/is_stock" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/location">

                    <TextView
                        android:id="@+id/quantity_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Qty"
                        android:textSize="16sp" />


                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/product_quantity_drop_down"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginHorizontal="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
            <!--*******ADD TO BAG********-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_to_bag"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/container2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:letterSpacing="0.09"
                android:onClick="@{view->listener.onImageClicked(view)}"
                android:text="ADD  TO  BAG"
                android:textColor="#fff"
                android:textSize="17dp"
                app:backgroundTint="@color/partial_black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buy_now"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_to_bag"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:letterSpacing="0.09"
                android:onClick="@{view->listener.onImageClicked(view)}"
                android:padding="5dp"
                android:text="BUY  NOW"
                android:textColor="#fff"
                android:textSize="18dp"
                app:backgroundTint="@color/partial_black" />

            <!--*******WISHLIST********-->

            <LinearLayout
                android:id="@+id/wishlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buy_now"
                android:layout_marginTop="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/ic_fav"
                        android:drawablePadding="9dp"
                        android:gravity="center"
                        android:padding="16dp"
                        android:text="@string/Wishlist"
                        android:textColor="@color/text"
                        android:textSize="14dp"

                        />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/ic_share"
                        android:gravity="center"
                        android:padding="16dp"
                        android:text="@string/Share"
                        android:textColor="@color/text"
                        android:textSize="14dp" />
                </LinearLayout>
            </LinearLayout>


        </RelativeLayout>
    </ScrollView>

</layout>
